# tas_client_api

./: .gitignore  CMakeLists.txt  CMakePresets.json  conanfile.py
.github/: python-versions.json
.github/workflows/: build-all.yml  linux-python.yml  manylinux.yml  publish-pypi.yml  windows-python.yml
cmake/templates/: setup.py.in
cmake/toolchains/: linux-cross-zig.cmake
python/: CMakeLists.txt  requirements.txt
src/tas_client/: tas_client_server_con.h  tas_debug.h
tools/: build-linux.ps1  build-manylinux-wheels.ps1
